# Agentic-DevOps

./: .agent_active_session  .gitignore  ARCHITECTURE_AND_GUIDE.md  MANUAL_TESTING_GUIDE.md  README.md  pyproject.toml  regenerate_embeddings.py  reproduce_ip_tool.py  requirements.txt  verification.txt  verify_clean.txt
agentic_docker/: __init__.py  agent.py  cli.py  safety.py
agentic_docker/database/: agentic_docker.db
agentic_docker/llm/: __init__.py  ollama_client.py
agentic_docker/mcp/: __init__.py  client.py  server.py
agentic_docker/tools/: __init__.py  base.py  docker_list.py  docker_run.py  docker_stop.py
devops_agent/: agent.py  agent_module.py  api_server.py  cli.py  cli_helper.py  compiled_agent.json  context_cache.py  data_loader.py  dspy_client.py  optimize.py  pulse.py  regex_router.py  router.py  safety.py  semantic_cache.py  settings.py  smart_router.py  tool_indexer.py
devops_agent/data/: auto_templates.json  intents.json  synthetic_examples.json
devops_agent/database/: db.py  session_manager.py
devops_agent/formatters/: __init__.py  base.py  diagnostics.py  docker.py  k8s.py  registry.py
devops_agent/k8s_tools/: __init__.py  k8s_utils.py  local_k8s_describe_pod.py  local_k8s_list_nodes.py  local_k8s_list_pods.py  remote_k8s_debug_tools.py  remote_k8s_discovery_tools.py  remote_k8s_exec_tools.py  remote_k8s_extended_tools.py  remote_k8s_metrics_tools.py  (+3 more)
scripts/: benchmark_latency.py  generate_synthetic_data.py  test_regex.py  verify_cache.py  verify_imports.py  verify_rag.py  verify_safety.py
tests/: test_context_routing.py  test_override.py  test_parser_chaining.py  test_remote_k8s_advanced.py  test_remote_k8s_debug.py  test_smart_router.py
(+15 files in other folders)
